--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <tbody>
             <tr>
                 <td>1</td>
-                <td>Basics of HTML</td>
-                <td><a href="basics.html">Link</a></td>
+                <td>HTML Forms</td>
+                <td><a href="forms.html">Link</a></td>
             </tr>
             </tbody>
         </table>
